--- a/src/index.css
+++ b/src/index.css
@@ -41,10 +41,9 @@
   align-items: center;
 }
 .main-background .background-effect main .card-ground {
-  /* margin: 0px auto; */
   background-color: rgba(255, 255, 255, 0.1019607843);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
-  width: 50%;
+  width: 40%;
   font-size: 3rem;
   padding: 15px;
   border-radius: 15px;
@@ -82,6 +81,7 @@
   letter-spacing: 1px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 2rem;
+  box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.504);
 }
 .main-background .background-effect footer ul {
   display: flex;
