--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,10 @@ $fourthColor: #BAFFB4;
                 width: 150px;
                 margin-right: 25px;
                 /* text-shadow: 5px 5px 5px black; */
+
+                animation-name: grow-decrease;
+                animation-duration: 1s;
+                animation-iteration-count: infinite;
             }
             
             h1{
@@ -196,5 +200,12 @@ $fourthColor: #BAFFB4;
                 }
             }
         }
+    }
+}
+
+@keyframes grow-decrease {
+    to {
+        transform: scale(1.2);
+        opacity: .8;
     }
 }
