--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,25 @@
 .main-background .background-effect main .card-ground button:hover {
   transform: scale(1.2);
 }
+.main-background .background-effect main .card-ground label {
+  text-align: center;
+}
+.main-background .background-effect main .card-ground label div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border-top: 1px solid gray;
+  padding-top: 10px;
+  margin: 10px 0px;
+}
+.main-background .background-effect main .card-ground label div input {
+  width: 75%;
+  height: 20px;
+  margin-right: 10px;
+  font-size: 20px;
+  padding: 5px 0px;
+}
 .main-background .background-effect footer {
   display: flex;
   justify-content: space-between;
