--- a/src/index.scss
+++ b/src/index.scss
@@ -91,6 +91,29 @@ $fourthColor: #BAFFB4;
                                 transform: scale(1.2);
                             }
                     }
+
+                    label {
+                        text-align: center;
+
+                        div {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            font-size: 20px;
+                            border-top: 1px solid gray;
+                            padding-top: 10px;
+                            margin: 10px 0px;
+
+                            input {
+                                width: 75%;
+                                height: 20px;
+                                margin-right: 10px;
+                                font-size: 20px;
+                                padding: 5px 0px;
+                            }
+                        }
+                    }
     
                 }
         }
