Alterações no CSS do componente inputStyled

--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@
   height: 20px;
   margin-right: 10px;
   font-size: 20px;
-  padding: 5px 0px;
+  padding: 5px;
 }
 .main-background .background-effect footer {
   display: flex;
