--- a/src/index.scss
+++ b/src/index.scss
@@ -110,7 +110,7 @@ $fourthColor: #BAFFB4;
                                 height: 20px;
                                 margin-right: 10px;
                                 font-size: 20px;
-                                padding: 5px 0px;
+                                padding: 5px;
                             }
                         }
                     }
