--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@
   width: 40%;
   font-size: 3rem;
   padding: 15px;
+  margin: 20px 0px;
   border-radius: 15px;
   backdrop-filter: blur(5px);
   display: flex;
