--- a/src/index.scss
+++ b/src/index.scss
@@ -59,7 +59,10 @@ $fourthColor: #BAFFB4;
                     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
                     width: 40%;
                     font-size: 3rem;
+
                     padding: 15px;
+                    margin: 20px 0px;
+
                     border-radius: 15px;
                     backdrop-filter: blur(5px);
     
