--- a/src/index.css
+++ b/src/index.css
@@ -44,19 +44,31 @@
   align-items: center;
 }
 .main-background .background-effect main .card-ground {
+  position: relative;
   background-color: rgba(255, 255, 255, 0.1019607843);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
   width: 40%;
-  font-size: 3rem;
+  height: 139px;
+  font-size: 4.5rem;
   padding: 15px;
   margin: 20px 0px;
   border-radius: 15px;
   backdrop-filter: blur(5px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   color: white;
+  overflow: hidden;
+}
+.main-background .background-effect main .card-ground .form-content {
+  display: flex;
+  position: absolute;
+  transition: 1s;
+  background-color: rgba(255, 0, 0, 0.138);
+  border-top: 1px solid wheat;
+  width: 300%;
+}
+.main-background .background-effect main .card-ground .form-content .form-area {
+  border-right: 1px solid red;
+  background-color: #28a745;
+  width: 33.3%;
 }
 .main-background .background-effect main .card-ground h2 {
   text-align: center;
