--- a/src/index.scss
+++ b/src/index.scss
@@ -54,11 +54,13 @@ $fourthColor: #BAFFB4;
             justify-content: space-around;
             align-items: center;
                 
-                .card-ground{
+                .card-ground{   
+                    position: relative;              
                     background-color: #ffffff1a;
                     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
                     width: 40%;
-                    font-size: 3rem;
+                    height: 139px;
+                    font-size: 4.5rem;
 
                     padding: 15px;
                     margin: 20px 0px;
@@ -66,12 +68,24 @@ $fourthColor: #BAFFB4;
                     border-radius: 15px;
                     backdrop-filter: blur(5px);
     
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-around;
-                    align-items: center;
-    
                     color: white;
+                    overflow: hidden;
+
+                    .form-content{
+                        display: flex;
+                        position: absolute;
+                        transition: 1s;
+
+                        background-color: rgba(255, 0, 0, 0.138);
+                        border-top: 1px solid wheat;
+                        width: 300%;
+
+                        .form-area{
+                            border-right: 1px solid red;
+                            background-color: #28a745;
+                            width: 33.3%;
+                        }
+                    }
     
                     h2 {
                         text-align: center;
