--- a/src/index.scss
+++ b/src/index.scss
@@ -72,18 +72,18 @@ $fourthColor: #BAFFB4;
                     overflow: hidden;
 
                     .form-content{
-                        display: flex;
+                        display: grid;
                         position: absolute;
                         transition: 1s;
 
                         background-color: rgba(255, 0, 0, 0.138);
                         border-top: 1px solid wheat;
-                        width: 300%;
+                        /* width: 300%; */
 
                         .form-area{
                             border-right: 1px solid red;
                             background-color: #28a745;
-                            width: 33.3%;
+                            /* width: 33.3%; */
                         }
                     }
     
