--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,9 @@
 }
 .main-background .background-effect main .card-ground button {
   background-color: #28a745;
-  padding: 10px 20px;
+  padding: 10px 10px;
+  width: 180px;
+  text-align: center;
   margin-top: 10px;
   border: 3px solid white;
   border-radius: 10px;
@@ -86,6 +88,7 @@
 }
 .main-background .background-effect main .card-ground button:hover {
   transform: scale(1.2);
+  z-index: 2;
 }
 .main-background .background-effect main .card-ground label {
   text-align: center;
