--- a/src/index.scss
+++ b/src/index.scss
@@ -94,7 +94,9 @@ $fourthColor: #BAFFB4;
     
                     button {
                         background-color: #28a745;
-                        padding: 10px 20px;
+                        padding: 10px 10px;
+                        width: 180px;
+                        text-align: center;
                         margin-top: 10px;
                         border: 3px solid white;
                         border-radius: 10px;
@@ -106,6 +108,7 @@ $fourthColor: #BAFFB4;
     
                             &:hover{
                                 transform: scale(1.2);
+                                z-index: 2;
                             }
                     }
 
