Acerto no texto, icone e outros detalhes dos botões do painel

--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,9 @@
   transform: scale(1.2);
   z-index: 2;
 }
+.main-background .background-effect main .card-ground button svg {
+  width: 30px;
+}
 .main-background .background-effect main .card-ground label {
   text-align: center;
 }
