--- a/src/index.css
+++ b/src/index.css
@@ -61,14 +61,6 @@
   display: grid;
   position: absolute;
   transition: 1s;
-  background-color: rgba(255, 0, 0, 0.138);
-  border-top: 1px solid wheat;
-  /* width: 300%; */
-}
-.main-background .background-effect main .card-ground .form-content .form-area {
-  border-right: 1px solid red;
-  background-color: #28a745;
-  /* width: 33.3%; */
 }
 .main-background .background-effect main .card-ground h2 {
   text-align: center;
@@ -93,8 +85,14 @@
 .main-background .background-effect main .card-ground button svg {
   width: 30px;
 }
+.main-background .background-effect main .card-ground h2 {
+  text-align: center;
+  font-size: 20px;
+}
 .main-background .background-effect main .card-ground label {
   text-align: center;
+  font-size: 20px;
+  background-color: red;
 }
 .main-background .background-effect main .card-ground label div {
   display: flex;
