--- a/src/index.scss
+++ b/src/index.scss
@@ -76,15 +76,6 @@ $fourthColor: #BAFFB4;
                         position: absolute;
                         transition: 1s;
 
-                        background-color: rgba(255, 0, 0, 0.138);
-                        border-top: 1px solid wheat;
-                        /* width: 300%; */
-
-                        .form-area{
-                            border-right: 1px solid red;
-                            background-color: #28a745;
-                            /* width: 33.3%; */
-                        }
                     }
     
                     h2 {
@@ -116,8 +107,15 @@ $fourthColor: #BAFFB4;
                         }
                     }
 
+                    h2 {
+                        text-align: center;
+                        font-size: 20px;
+                    }
+
                     label {
                         text-align: center;
+                        font-size: 20px;
+                        background-color: red;
 
                         div {
                             display: flex;
