--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@
   background-color: rgba(255, 255, 255, 0.1019607843);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
   width: 40%;
-  height: 139px;
+  height: 180px;
   font-size: 4.5rem;
   padding: 15px;
   margin: 20px 0px;
@@ -62,19 +62,26 @@
   position: absolute;
   transition: 1s;
 }
+.main-background .background-effect main .card-ground .form-content .form-area p {
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding: 0px 15px;
+}
 .main-background .background-effect main .card-ground h2 {
   text-align: center;
   margin: 10px 0px;
 }
 .main-background .background-effect main .card-ground button {
   background-color: #28a745;
-  padding: 10px 10px;
+  padding: 5px 5px;
   width: 180px;
   text-align: center;
   margin-top: 10px;
   border: 3px solid white;
   border-radius: 10px;
   color: white;
+  font-size: 2rem;
+  margin-bottom: 8px;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -167,6 +174,11 @@
     margin-bottom: 10px;
   }
 }
+@media (max-width: 650px) {
+  .main-background .background-effect main .card-ground {
+    height: 200px;
+  }
+}
 @media (max-width: 620px) {
   .main-background .background-effect header {
     padding: 0px 10px;
@@ -183,6 +195,11 @@
   .main-background .background-effect main .card-ground {
     width: 100%;
     border-radius: 0px;
+  }
+}
+@media (max-width: 470px) {
+  .main-background .background-effect main .card-ground {
+    height: 250px;
   }
 }
 @keyframes grow-decrease {
