--- a/src/index.scss
+++ b/src/index.scss
@@ -59,7 +59,7 @@ $fourthColor: #BAFFB4;
                     background-color: #ffffff1a;
                     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
                     width: 40%;
-                    height: 139px;
+                    height: 180px;
                     font-size: 4.5rem;
 
                     padding: 15px;
@@ -76,6 +76,13 @@ $fourthColor: #BAFFB4;
                         position: absolute;
                         transition: 1s;
 
+                        .form-area{
+                            p {
+                                font-size: 1.5rem;
+                                font-weight: 700;
+                                padding: 0px 15px;
+                            }
+                        }
                     }
     
                     h2 {
@@ -85,7 +92,7 @@ $fourthColor: #BAFFB4;
     
                     button {
                         background-color: #28a745;
-                        padding: 10px 10px;
+                        padding: 5px 5px;
                         width: 180px;
                         text-align: center;
                         margin-top: 10px;
@@ -93,6 +100,8 @@ $fourthColor: #BAFFB4;
                         border-radius: 10px;
     
                         color: white;
+                        font-size: 2rem;
+                        margin-bottom: 8px;
     
                         transition: .3s;
                         cursor: pointer;
@@ -228,6 +237,18 @@ $fourthColor: #BAFFB4;
 
 }
 
+@media(max-width:650px){
+    .main-background{
+        .background-effect{
+            main {
+                .card-ground{
+                    height: 200px;
+                }
+            }
+        }
+    }
+}
+
 @media(max-width:620px){
     .main-background{
         .background-effect{
@@ -256,10 +277,14 @@ $fourthColor: #BAFFB4;
     }
 }
 
-@media(max-width:400px){
-    main {
-        .card-ground{
-            
+@media(max-width:470px){
+    .main-background{
+        .background-effect{
+            main {
+                .card-ground{
+                    height: 250px;
+                }
+            }
         }
     }
 }
