--- a/src/index.css
+++ b/src/index.css
@@ -110,12 +110,16 @@
   padding-top: 10px;
   margin: 10px 0px;
 }
-.main-background .background-effect main .card-ground label div input {
+.main-background .background-effect main .card-ground label div input, .main-background .background-effect main .card-ground label div select {
   width: 75%;
   height: 20px;
   margin-right: 10px;
   font-size: 20px;
   padding: 5px;
+}
+.main-background .background-effect main .card-ground label div select {
+  width: 90%;
+  height: 35px;
 }
 .main-background .background-effect footer {
   display: flex;
