--- a/src/index.scss
+++ b/src/index.scss
@@ -136,12 +136,17 @@ $fourthColor: #BAFFB4;
                             padding-top: 10px;
                             margin: 10px 0px;
 
-                            input {
+                            input, select {
                                 width: 75%;
                                 height: 20px;
                                 margin-right: 10px;
                                 font-size: 20px;
                                 padding: 5px;
+                            }
+
+                            select {
+                                width: 90%;
+                                height: 35px;
                             }
                         }
                     }
