--- a/src/index.scss
+++ b/src/index.scss
@@ -151,6 +151,60 @@ $fourthColor: #BAFFB4;
                     }
     
                 }
+
+                .result-main{
+                    backdrop-filter: blur( 6.5px );
+                    background-color: rgba(255, 255, 255, 0.095);
+                    color: #fff;
+                    border-radius: 10px;
+                    padding: 10px;
+                    font-size: 30px;
+
+                    h2{
+                        text-align: center;
+                    }
+
+                    .macros-show{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-evenly;
+                        margin-top: 20px;
+                        
+                        .macro{
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
+                            padding: 0px 10px;
+                            text-align: center;
+                            border-radius: 10px;
+                            background-color: rgba(255, 255, 255, 0.095);
+                            font-size: 30px;
+                            height: 150px;
+                            width: 200px;
+                            overflow: hidden;
+                            
+                            .data{
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                                font-size: inherit;
+                                flex-grow: 1;
+
+                                p{
+                                    margin-top: 15px;
+                                }
+                            }
+
+                            .macro-name{
+                                background-color: rgba(255, 255, 255, 0.095);
+                                width: 115%;
+                                padding-bottom: 5px;
+                                font-size: inherit;
+                            }
+                        }
+                    }
+                }
         }
 
         footer{
