--- a/src/index.css
+++ b/src/index.css
@@ -123,18 +123,22 @@
 .main-background .background-effect main .result-main {
   backdrop-filter: blur(6.5px);
   background-color: rgba(255, 255, 255, 0.095);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
   color: #fff;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px;
   font-size: 30px;
+  width: 70%;
 }
 .main-background .background-effect main .result-main h2 {
   text-align: center;
+  font-size: 30px;
 }
 .main-background .background-effect main .result-main .macros-show {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   margin-top: 20px;
 }
 .main-background .background-effect main .result-main .macros-show .macro {
@@ -143,6 +147,7 @@
   align-items: center;
   justify-content: center;
   padding: 0px 10px;
+  margin: 10px 10px;
   text-align: center;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.095);
@@ -150,6 +155,7 @@
   height: 150px;
   width: 200px;
   overflow: hidden;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.31);
 }
 .main-background .background-effect main .result-main .macros-show .macro .data {
   display: flex;
@@ -166,6 +172,9 @@
   width: 115%;
   padding-bottom: 5px;
   font-size: inherit;
+}
+.main-background .background-effect main .result-main .info-conclusion {
+  margin-top: 20px;
 }
 .main-background .background-effect footer {
   display: flex;
@@ -191,6 +200,15 @@
   width: 30px;
 }
 
+@media (max-width: 1340px) {
+  .main-background .background-effect main .result-main {
+    width: 100%;
+    border-radius: 0px;
+  }
+  .main-background .background-effect main .result-main h2 {
+    font-size: 20px;
+  }
+}
 @media (max-width: 1306px) {
   .main-background header {
     padding: 0px 40px;
