--- a/src/index.scss
+++ b/src/index.scss
@@ -155,20 +155,25 @@ $fourthColor: #BAFFB4;
                 .result-main{
                     backdrop-filter: blur( 6.5px );
                     background-color: rgba(255, 255, 255, 0.095);
+                    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.464);
                     color: #fff;
                     border-radius: 10px;
-                    padding: 10px;
+                    padding: 15px;
                     font-size: 30px;
+                    width: /* 1200px */ 70%;
 
                     h2{
                         text-align: center;
+                        font-size: 30px;
                     }
 
                     .macros-show{
                         display: flex;
                         align-items: center;
                         justify-content: space-evenly;
+                        flex-wrap: wrap;
                         margin-top: 20px;
+                        
                         
                         .macro{
                             display: flex;
@@ -176,6 +181,7 @@ $fourthColor: #BAFFB4;
                             align-items: center;
                             justify-content: center;
                             padding: 0px 10px;
+                            margin: 10px 10px;
                             text-align: center;
                             border-radius: 10px;
                             background-color: rgba(255, 255, 255, 0.095);
@@ -183,6 +189,7 @@ $fourthColor: #BAFFB4;
                             height: 150px;
                             width: 200px;
                             overflow: hidden;
+                            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.31);
                             
                             .data{
                                 display: flex;
@@ -203,6 +210,10 @@ $fourthColor: #BAFFB4;
                                 font-size: inherit;
                             }
                         }
+                    }
+
+                    .info-conclusion{
+                        margin-top: 20px;
                     }
                 }
         }
@@ -240,6 +251,23 @@ $fourthColor: #BAFFB4;
 
     }
 
+}
+
+@media(max-width: 1340px){
+    .main-background{
+        .background-effect{
+            main {
+                .result-main{
+                    width: 100%;
+                    border-radius: 0px;
+
+                    h2{
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media(max-width: 1306px){
