--- a/src/index.scss
+++ b/src/index.scss
@@ -197,6 +197,7 @@ $fourthColor: #BAFFB4;
                                 justify-content: center;
                                 font-size: inherit;
                                 flex-grow: 1;
+                                text-shadow: 2px 2px rgba(0, 0, 0, 0.453);
 
                                 p{
                                     margin-top: 15px;
@@ -363,7 +364,7 @@ $fourthColor: #BAFFB4;
     }
 }
 
-@media(max-width:470px){
+@media(max-width:480px){
     .main-background{
         .background-effect{
             main {
@@ -372,6 +373,12 @@ $fourthColor: #BAFFB4;
                 }
             }
         }
+    }
+}
+
+@media(max-width:400px){
+    .main-background{
+        height: 100%;
     }
 }
 
