--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,11 @@
     height: 200px;
   }
 }
+@media (max-width: 510px) {
+  .result-main {
+    margin-bottom: 20px;
+  }
+}
 @media (max-width: 620px) {
   .main-background .background-effect header {
     padding: 0px 10px;
@@ -267,13 +272,16 @@
   }
 }
 @media (max-width: 480px) {
+  .main-background {
+    height: 120vh;
+  }
   .main-background .background-effect main .card-ground {
     height: 250px;
   }
 }
 @media (max-width: 400px) {
   .main-background {
-    height: 100%;
+    height: 150vh;
   }
 }
 @keyframes grow-decrease {
