--- a/src/index.scss
+++ b/src/index.scss
@@ -324,6 +324,12 @@ $fourthColor: #BAFFB4;
 
 }
 
+@media(max-height:740px){
+    .main-background {
+        height: 740px;
+    }
+}
+
 @media(max-width:650px){
     .main-background{
         .background-effect{
