--- a/src/index.scss
+++ b/src/index.scss
@@ -214,7 +214,12 @@ $fourthColor: #BAFFB4;
                     }
 
                     .info-conclusion{
+                        font-size: 3rem;
                         margin-top: 20px;
+
+                        ul{
+                            font-size: 3rem;
+                        }
                     }
                 }
         }
