chore: make adjusts in space

--- a/src/index.scss
+++ b/src/index.scss
@@ -219,6 +219,8 @@ $fourthColor: #BAFFB4;
 
                         ul{
                             font-size: 3rem;
+
+                            padding: 10px 25px;
                         }
                     }
                 }
