--- a/src/index.css
+++ b/src/index.css
@@ -180,6 +180,7 @@
 }
 .main-background .background-effect main .result-main .info-conclusion ul {
   font-size: 3rem;
+  padding: 10px 25px;
 }
 .main-background .background-effect footer {
   display: flex;
