--- a/src/index.scss
+++ b/src/index.scss
@@ -15,16 +15,21 @@ $fourthColor: #BAFFB4;
 .main-background{
     background-image: url('../public/backgrounds/pexels-victor-freitas-949126.jpg');
     background-size: 100%;
-    height: 100vh;
+    min-height: 100vh;
     letter-spacing: 5px;
     font-family: 'Inter', sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    
 
     .background-effect{
         background-image: linear-gradient(rgba(255, 255, 255, 0),black);
         height: 100%;
-
         display: flex;
         flex-direction: column;
+
+        flex-grow: 1;
 
         header{
             display: flex;
@@ -35,8 +40,6 @@ $fourthColor: #BAFFB4;
             svg {
                 width: 150px;
                 margin-right: 25px;
-                /* text-shadow: 5px 5px 5px black; */
-
                 animation-name: grow-decrease;
                 animation-duration: 1s;
                 animation-iteration-count: infinite;
@@ -331,11 +334,11 @@ $fourthColor: #BAFFB4;
 
 }
 
-@media(max-height:740px){
+/* @media(max-height:740px){
     .main-background {
         height: 740px;
     }
-}
+} */
 
 @media(max-width:650px){
     .main-background{
@@ -385,7 +388,7 @@ $fourthColor: #BAFFB4;
 
 @media(max-width:480px){
     .main-background{
-        height: 120vh;
+        /* height: 120vh; */
 
         .background-effect{
             main {
@@ -397,11 +400,11 @@ $fourthColor: #BAFFB4;
     }
 }
 
-@media(max-width:400px){
+/* @media(max-width:400px){
     .main-background{
         height: 150vh;
     }
-}
+} */
 
 @keyframes grow-decrease {
     to {
