--- a/src/index.scss
+++ b/src/index.scss
@@ -164,6 +164,7 @@ $fourthColor: #BAFFB4;
                     padding: 15px;
                     font-size: 30px;
                     width: /* 1200px */ 70%;
+                    margin-bottom: 50px;
 
                     h2{
                         text-align: center;
@@ -224,6 +225,10 @@ $fourthColor: #BAFFB4;
                             font-size: 3rem;
 
                             padding: 10px 25px;
+                        }
+
+                        strong{
+                            font-size: inherit;
                         }
                     }
                 }
